# AMCIS

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
scripts/: install_dev.sh
src/adjoint_mc/: __init__.py  amcis_main.py  config.py
src/adjoint_mc/atomic/: __init__.py  cx_cross_section.py  cx_rejection.py
src/adjoint_mc/core/: __init__.py  _tracker.pyx  grid.pxd  rng.pxd
src/adjoint_mc/fields/: __init__.py  grid_interp.py  pretabulate.py
src/adjoint_mc/geometry/: __init__.py  wall.py
src/adjoint_mc/gui/: __init__.py  amcis_app.py
src/adjoint_mc/gui/widgets/: amcis_results.py  core_fueling_results.py  plot_canvas.py  plot_results_panel.py  scrollable_frame.py
src/adjoint_mc/io/: hdg_loader.py  wall_flux.py
src/adjoint_mc/pipeline/: __init__.py  amcis_run.py  core_fueling_run.py  timing.py
src/adjoint_mc/sampling/: __init__.py  point_seed.py  seeds.py
src/adjoint_mc/scoring/: __init__.py  amcis_provenance.py  provenance.py  tallies.py
src/adjoint_mc/tracker/: __init__.py  amcis_backward.py  amcis_cython.py  backward.py  backward_cython.py  backward_full.py  backward_ion.py  backward_trace.py
src/adjoint_mc/viz/: amcis_maps.py  amcis_mc_plots.py  core_fueling_maps.py  mc_summary.py  plasma_fields.py  provenance.py  separatrix.py  termination_summary.py  wall_style.py
tests/: test_amcis.py  test_core_fueling.py  test_cython_parity.py  test_seed_rejection.py  test_separatrix.py  test_wall_flux.py
